[workspace]
members = [
  "keyset",
  "keyset-color",
  "keyset-drawing",
  "keyset-font",
  "keyset-geom",
  "keyset-key",
  "keyset-profile",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Lucas Jansen"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/staticintlucas/keyset-rs"
license = "MIT OR Apache-2.0"
