[workspace]
members = [
  "keyset",
  "keyset-color",
  "keyset-drawing",
  "keyset-font",
  "keyset-geom",
  "keyset-key",
  "keyset-profile",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
authors = ["Lucas Jansen"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/staticintlucas/keyset-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
color = { package = "keyset-color", path = "keyset-color", version = "0.3.2" }
drawing = { package = "keyset-drawing", path = "keyset-drawing", version = "0.3.2" }
font = { package = "keyset-font", path = "keyset-font", version = "0.3.2" }
geom = { package = "keyset-geom", path = "keyset-geom", version = "0.3.2" }
key = { package = "keyset-key", path = "keyset-key", version = "0.3.2" }
profile = { package = "keyset-profile", path = "keyset-profile", version = "0.3.2" }

assert_matches = "1.5"
euclid = "0.22"
indoc = "2.0"
interp = { version = "1.0", features = ["interp_array"] }
isclose = "0.1"
kle-serial = "0.3"
log = "0.4"
miniz_oxide = "0.7"
ouroboros = "0.18"
pdf-writer = "0.9"
rgb = { version = "0.8", default-features = false }
saturate = "0.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
svg = "0.17"
tiny-skia = { version = "0.11", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"] }
ttf-parser = { version = "0.21", default-features = false, features = ["std"] }

[workspace.lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
unused = "warn"

missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
non-ascii-idents = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "warn"
unsafe-code = "forbid"
unstable-features = "warn"
unused-crate-dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
nursery = "warn"
pedantic = "warn"

allow_attributes_without_reason = "warn"
dbg_macro = "warn"
expect_used = "warn"
panic = "warn"
pattern_type_mismatch = "warn"
redundant_type_annotations = "warn"
try_err = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"

suboptimal-flops = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#6867
module-name-repetitions = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#8524
