[workspace]
members = [
    "keyset",
    "keyset-color",
    "keyset-drawing",
    "keyset-font",
    "keyset-geom",
    "keyset-key",
    "keyset-profile",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
authors = ["Lucas Jansen"]
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/staticintlucas/keyset-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
color = { package = "keyset-color", path = "keyset-color", version = "0.3.2" }
drawing = { package = "keyset-drawing", path = "keyset-drawing", version = "0.3.2" }
font = { package = "keyset-font", path = "keyset-font", version = "0.3.2" }
geom = { package = "keyset-geom", path = "keyset-geom", version = "0.3.2" }
key = { package = "keyset-key", path = "keyset-key", version = "0.3.2" }
profile = { package = "keyset-profile", path = "keyset-profile", version = "0.3.2" }

assert_matches = "1.5"
indoc = "2.0"
isclose = "0.3"
itertools = "0.14"
kle-serial = "0.3"
miniz_oxide = "0.8"
num-traits = "0.2"
paste = "1.0"
pdf-writer = "0.13"
rgb = { version = "0.8", default-features = false }
rustybuzz = "0.20"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-untagged = "0.1"
serde_json = "1.0"
soml = { version = "0.2", default-features = false, features = ["std"] }
svg = "0.18"
tiny-skia = "0.11"
yoke = { version = "0.8", default-features = false, features = ["alloc", "derive"] }

[workspace.lints.rust]
deprecated_safe = "warn"
edition_2024_expr_fragment_specifier = { level = "allow", priority = 1 }
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
nonstandard_style = "warn"
refining_impl_trait = "warn"
rust_2024_compatibility = "warn"
unused = "warn"

ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
linker_messages = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] } # taiki-e/cargo-llvm-cov#123
unit_bindings = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

unsafe_code = { level = "forbid", priority = 1 }

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
nursery = "warn"
pedantic = "warn"

allow_attributes_without_reason = "warn"
dbg_macro = "warn"
else_if_without_else = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
missing_inline_in_public_items = "warn"
module_name_repetitions = "warn"
panic = "warn"
pattern_type_mismatch = "warn"
redundant_type_annotations = "warn"
semicolon_outside_block = "warn"
try_err = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

enum_glob_use = { level = "allow", priority = 1 }

suboptimal-flops = { level = "allow", priority = 1 } # TODO rust-lang/rust-clippy#6867
