[package]
name = "keyset-color"
version = "0.1.0"
description = "Color type and conversions for keyset"

# We don't  really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tiny-skia = { version = "0.11", default-features = false, features = ["std"], optional = true }
rgb = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
assert_approx_eq = "1.1"

[package.metadata.docs.rs]
all-features = true
