[package]
name = "keyset-color"
description = "Color type and conversions for keyset"

# We don't really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
isclose.workspace = true
saturate.workspace = true
tiny-skia = { workspace = true, optional = true }
rgb = { workspace = true, optional = true }
