[package]
name = "keyset-core"
description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
keywords = ["keyboard", "keycap", "keyset", "layout", "diagram"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
interp = { version = "1.0", features = ["interp_array"] }
itertools = "0.10"
kle-serial = "0.2"
kurbo = "0.9"
log = "0.4"
miniz_oxide = "0.7"
pdf-writer = "0.8"
rgb = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
svg = "0.13"
tiny-skia = "0.11"
toml = { version = "0.7", default-features = false, features = ["parse"] }
ttf-parser = { version = "0.18", default-features = false, features = ["std"] }

[dev-dependencies]
assert_approx_eq = "1.1"
assert_matches = "1.5"
maplit = "1.0"
unindent = "0.2"
