[package]
name = "keyset-core"
version = "0.2.1"
description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."

# We don't  really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color = { package = "keyset-color", path = "../keyset-color", version = "0.1.0", features = ["rgb", "tiny-skia"] }
geom = { package = "keyset-geom", path = "../keyset-geom", version = "0.1.0" }
key = { package = "keyset-key", path = "../keyset-key", version = "0.1.0", features = ["kle"] }
profile = { package = "keyset-profile", path = "../keyset-profile", version = "0.1.0", features = ["toml"] }

interp = { version = "1.0", features = ["interp_array"] }
itertools = "0.10"
log = "0.4"
miniz_oxide = "0.7"
pdf-writer = "0.8"
rgb = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
svg = "0.13"
tiny-skia = "0.11"
toml = { version = "0.7", default-features = false, features = ["parse"] }
ttf-parser = { version = "0.18", default-features = false, features = ["std"] }

[dev-dependencies]
assert_approx_eq = "1.1"
assert_matches = "1.5"
maplit = "1.0"
unindent = "0.2"
