[package]
name = "keyset-drawing"
description = "Drawing output functionality for keyset"

# We don't really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
pdf = ["dep:miniz_oxide", "dep:pdf-writer"]
png = ["dep:tiny-skia", "color/tiny-skia"]
svg = ["dep:svg"]

[dependencies]
color.workspace = true
font.workspace = true
geom.workspace = true
key.workspace = true
profile.workspace = true

log.workspace = true
miniz_oxide = { workspace = true, optional = true }
pdf-writer = { workspace = true, optional = true }
saturate.workspace = true
tiny-skia = { workspace = true, optional = true }
svg = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
isclose.workspace = true
itertools.workspace = true
