[package]
name = "keyset-font"
description = "Font type and functionality for keyset"

# We don't really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
geom.workspace = true

dashmap.workspace = true
log.workspace = true
ouroboros.workspace = true
ttf-parser.workspace = true

[dev-dependencies]
assert_matches.workspace = true
isclose = { workspace = true, features = ["euclid"] }
