[package]
name = "keyset-geom"
description = "Geometry types and conversions for keyset"

# We don't really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

metadata.docs.rs.all-features = true

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
euclid = "0.22"
isclose = { version = "0.1", features = ["euclid"] }

[dev-dependencies]
