[package]
name = "keyset-key"
description = "Key type and functionality for keyset"

# We don't really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
kle = ["dep:kle-serial", "dep:serde_json", "color/rgb"]

[dependencies]
color.workspace = true
geom.workspace = true

kle-serial = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
isclose = { workspace = true, features = ["euclid"] }
unindent.workspace = true
