[package]
name = "keyset-profile"
description = "Profile type and functionality for keyset"

# We don't really care about SEO for this crate, but Clippy complains if we
# leave these out altogether
keywords = ["keyset"]
categories = ["none"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
toml = ["serde", "dep:soml"]
json = ["serde", "dep:serde_json"]
serde = ["dep:serde"]

[dependencies]
geom.workspace = true
key.workspace = true

interp.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
soml = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
indoc.workspace = true
isclose.workspace = true
num-traits.workspace = true
serde_json.workspace = true
