[package]
name = "keyset"
description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
keywords = ["keyboard", "keycap", "keyset", "layout", "diagram"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
color.workspace = true
drawing = { workspace = true, features = ["pdf", "png", "svg"] }
font.workspace = true
key = { workspace = true, features = ["kle"] }
profile = { workspace = true, features = ["toml"] }

[dev-dependencies]
fontdb = "0.16"
