[package]
name = "keyset"
description = "A Rust tool to create pretty keyset layout diagrams using correct fonts and icons."
keywords = ["keyboard", "keycap", "keyset", "layout", "diagram"]
categories = [
    "command-line-utilities",
    "graphics",
    "multimedia::images",
    "rendering",
]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = [
    "json-profile",
    "toml-profile",
    "kle-layout",
    "pdf-drawing",
    "png-drawing",
    "svg-drawing",
]

json-profile = ["profile/json"]
toml-profile = ["profile/toml"]

kle-layout = ["key/kle"]
pdf-drawing = ["drawing/pdf"]
png-drawing = ["drawing/png"]
svg-drawing = ["drawing/svg"]

[dependencies]
color.workspace = true
drawing.workspace = true
font.workspace = true
key.workspace = true
profile.workspace = true
